[package]
name = "rusty-mixer"
version = "0.1.0"
description = "Neon Hello World"
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
neon = "1"
windows = { version = "0.58", features = [
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_UI_Shell_PropertiesSystem",      # For IPropertyStore & STGM_READ
    "Win32_Devices_FunctionDiscovery",       # For PKEY_Device_FriendlyName
] }